[tool.black]
line-length = 88

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pldm"
version = "1.0.0"
requires-python = ">=3.8"
dynamic = ["description"]
packages = ["pldm", "pldm_envs"]

[tool.ruff]
target-version = "py310"
line-length = 88
